--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,7 @@
             android:hint="@string/sentence_prompt"
             android:inputType="textMultiLine"
             android:maxLength="4096"
-            android:maxLines="8"
-            android:minLines="8"
+            android:maxLines="30"
             android:padding="10dip"
             android:scrollbars="vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -61,7 +60,7 @@
             android:layout_marginTop="12dp"
             android:autofillHints="Enter a width."
             android:hint="@string/width_prompt"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
