--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -1,113 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
+        android:id="@+id/Scroller"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/InputTextView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="16dp"
-            android:text="@string/instructions"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="103dp" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/InputSentenceEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:autofillHints="Add your sentence here."
-            android:background="@drawable/edittext_border"
-            android:gravity="top"
-            android:hint="@string/sentence_prompt"
-            android:inputType="textMultiLine"
-            android:maxLength="4096"
-            android:maxLines="30"
-            android:padding="10dip"
-            android:scrollbars="vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:typeface="monospace"
-            app:layout_constraintTop_toBottomOf="@+id/InputTextView"
-            tools:layout_editor_absoluteX="16dp" />
+            <TextView
+                android:id="@+id/InputTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginTop="16dp"
+                android:text="@string/instructions"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="103dp" />
 
-        <TextView
-            android:id="@+id/WidthTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="16dp"
-            android:text="@string/width_prompt"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            app:layout_constraintTop_toBottomOf="@+id/InputSentenceEditText"
-            tools:layout_editor_absoluteX="49dp" />
+            <EditText
+                android:id="@+id/InputSentenceEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:autofillHints="Add your sentence here."
+                android:background="@drawable/edittext_border"
+                android:gravity="top"
+                android:hint="@string/sentence_prompt"
+                android:inputType="textMultiLine"
+                android:maxLength="4096"
+                android:maxLines="30"
+                android:padding="10dip"
+                android:scrollbars="vertical"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:typeface="monospace"
+                app:layout_constraintTop_toBottomOf="@+id/InputTextView"
+                tools:layout_editor_absoluteX="16dp" />
 
-        <EditText
-            android:id="@+id/InputWidthEditText"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:autofillHints="Enter a width."
-            android:hint="@string/width_prompt"
-            android:inputType="numberSigned"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/WidthTextView" />
+            <TextView
+                android:id="@+id/WidthTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginTop="16dp"
+                android:text="@string/width_prompt"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                app:layout_constraintTop_toBottomOf="@+id/InputSentenceEditText"
+                tools:layout_editor_absoluteX="49dp" />
 
-        <Button
-            android:id="@+id/FindButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/button_prompt"
-            app:layout_constraintBottom_toTopOf="@+id/ResultTextView"
-            app:layout_constraintTop_toBottomOf="@+id/InputWidthEditText"
-            tools:layout_editor_absoluteX="5dp" />
+            <EditText
+                android:id="@+id/InputWidthEditText"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:autofillHints="Enter a width."
+                android:hint="@string/width_prompt"
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/WidthTextView" />
 
-        <TextView
-            android:id="@+id/ResultTextView"
-            android:layout_width="match_parent"
-            android:layout_height="30sp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="28dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/FindButton"
-            app:layout_constraintBottom_toTopOf="@+id/RiverTextView"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/FindButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/button_prompt"
+                app:layout_constraintBottom_toTopOf="@+id/ResultTextView"
+                app:layout_constraintTop_toBottomOf="@+id/InputWidthEditText"
+                tools:layout_editor_absoluteX="5dp" />
 
-        <TextView
-            android:id="@+id/RiverTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Output goes here"
-            android:background="@drawable/edittext_border"
-            android:gravity="top"
-            android:maxLength="4096"
-            android:maxLines="8"
-            android:minLines="8"
-            android:padding="10dip"
-            android:scrollbars="vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:typeface="monospace"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="5dp" />
+            <TextView
+                android:id="@+id/ResultTextView"
+                android:layout_width="match_parent"
+                android:layout_height="30sp"
+                android:layout_gravity="center"
+                android:layout_marginTop="28dp"
+                android:layout_marginBottom="28dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/RiverTextView"
+                app:layout_constraintTop_toBottomOf="@+id/FindButton"
+                tools:layout_editor_absoluteX="0dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/RiverTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="Output goes here"
+                android:background="@drawable/edittext_border"
+                android:gravity="top"
+                android:maxLength="4096"
+                android:maxLines="8"
+                android:minLines="8"
+                android:padding="10dip"
+                android:scrollbars="vertical"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:typeface="monospace"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@+id/ResultTextView"
+                tools:layout_editor_absoluteX="5dp" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/ThanksTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/thanks_user"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@+id/Scroller"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"/>
+
+</LinearLayout>
